Matrix default constructor, with test.

--- a/src/linearAlgebra/CMakeLists.txt
+++ b/src/linearAlgebra/CMakeLists.txt
@@ -21,3 +21,7 @@ target_include_directories(${LIBRARY_NAME}
     INTERFACE
         ${CMAKE_BINARY_DIR}/include/
 )
+
+if (BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
