Moved set identity implementation detail into detail/ subdir.

--- a/src/linearAlgebra/CMakeLists.txt
+++ b/src/linearAlgebra/CMakeLists.txt
@@ -22,6 +22,8 @@ target_include_directories(${LIBRARY_NAME}
         ${CMAKE_BINARY_DIR}/include/
 )
 
+add_subdirectory(detail)
+
 if (BUILD_TESTING)
     add_subdirectory(tests)
 endif()
