Added base/ subdirectory.

--- a/src/linearAlgebra/CMakeLists.txt
+++ b/src/linearAlgebra/CMakeLists.txt
@@ -22,7 +22,7 @@ target_include_directories(${LIBRARY_NAME}
         ${CMAKE_BINARY_DIR}/include/
 )
 
-add_subdirectory(detail)
+add_subdirectory(base)
 
 if (BUILD_TESTING)
     add_subdirectory(tests)
