cpp_test_program -> cpp_test

--- a/src/linear/tests/CMakeLists.txt
+++ b/src/linear/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB CPPFILES *.cpp)
-cpp_test_program(test_${LIBRARY_NAME}
+cpp_test(test_${LIBRARY_NAME}
     CPPFILES
         ${CPPFILES}
     LIBRARIES
