--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -151,7 +151,7 @@ jobs:
         run: |
           find . \
             -name ".git" -prune -o \
-            -name "*.cpp" -type f -exec clang-format -i --verbose {} + -o \
+            -path "./src/linear/tests" -prune -o \
             -name "*.h" -type f -exec clang-format -i --verbose {} +
       - name: Check for source differences
         run: |
